[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/daily_login_popup.gd" id="1"]

[node name="DailyLoginPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="StreakLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Day 1 Streak!"
horizontal_alignment = 1

[node name="DayContainer" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="RewardLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Reward: 100 CDs"
horizontal_alignment = 1

[node name="ClaimButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Claim!"
